--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "2.0.0-rc.3",
     "@angular/platform-browser-dynamic": "2.0.0-rc.3",
     "@angular/router": "3.0.0-alpha.7",
+    "bootstrap": "^3.3.6",
     "es6-shim": "0.35.1",
     "exists-sync": "0.0.3",
     "reflect-metadata": "0.1.3",
