--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^3.3.6",
     "es6-shim": "0.35.1",
     "exists-sync": "0.0.3",
+    "primeng": "^1.0.0-beta.10",
+    "primeui": "^4.1.13",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
